// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeavePeriodIntermittent renders the page with bonding leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsLeavePeriodIntermittent.hasLeaveHint"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    }
    label="Do you need to take off work in uneven blocks of time (intermittent leave)?"
    name="has_intermittent_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    visible={null}
  >
    <Alert
      state="warning"
    >
      You have to create a separate application for intermittent leave.
    </Alert>
  </ConditionalContent>
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={Array []}
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your intermittent leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodIntermittent.datesLead"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodIntermittent renders the page with bonding leave content 2`] = `"If you have already taken some or all of your family leave, tell us when you first missed work and your last day of leave."`;

exports[`LeavePeriodIntermittent renders the page with medical leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    state="info"
  >
    You will need a completed medical leave certification form for this section.
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsLeavePeriodIntermittent.hasLeaveHint"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    }
    label="Do you need to take off work in uneven blocks of time (intermittent leave)?"
    name="has_intermittent_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    visible={null}
  >
    <Alert
      state="warning"
    >
      You have to create a separate application for intermittent leave.
    </Alert>
  </ConditionalContent>
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={Array []}
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your intermittent leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodIntermittent.datesLead"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave or re‑evaluation date"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodIntermittent renders the page with medical leave content 2`] = `
Array [
  "If you have already taken some or all of your leave for this condition, tell us when you first missed work and your last day of leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Refer to Question 33 in the \\"Estimate leave details\\" section of the certification form (page 6).",
]
`;
